bug fix/white spaces

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -19,7 +19,7 @@ body {
 	height: 100%;
 	color: rgb(0, 0, 0);
 	user-select: none;
-	cursor: none;
+	/* cursor: none; */
 }
 
 /*----------------
